Build with Java 20, first build from https://jdk.java.net/20/