@@ -1539,6 +1539,24 @@
   </build>
   <profiles>
     <profile>
+      <id>java20</id>
+      <activation>
+        <jdk>20</jdk>
+      </activation>
+      <properties>
+        <testAdditionalRuntimeArgLine>--add-exports	java.base/sun.nio.ch=ALL-UNNAMED
+        			--add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <jdk.src.version>17</jdk.src.version>
+        <jdk.target.version>17</jdk.target.version>
+        <forbiddenapis.skip>false</forbiddenapis.skip>
+        <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
+        <jacoco.version>0.8.8</jacoco.version>
+        <compiler.plugin.version>3.10.1</compiler.plugin.version>
+        <cia.project.versions.compiler.plexus.java>1.1.1</cia.project.versions.compiler.plexus.java>
+        <surefire.version>3.0.0-M5</surefire.version>
+      </properties>
+    </profile>
+    <profile>
       <id>java19</id>
       <activation>
         <jdk>19</jdk>
